# ETHShanghai-2025

./: .gitmodules  DEPLOYMENT_GUIDE.md  PROJECT_SETUP_REPORT.md  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  demo_interactive.py  environment.yml  quick_start.py  requirements.txt  test_modules.py
backend/: Cargo.toml  start.bat  start.sh
backend/src/: main.rs
backend/src/api/: mod.rs  routes.rs
backend/src/api/handlers/: mod.rs
backend/src/database/operations/: order_operations.rs  statistics_operations.rs  strategy_operations.rs
backend/src/exchanges/: mod.rs  traits.rs
backend/src/exchanges/uniswap/: client.rs  contracts.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs  price_monitor.rs
backend/src/strategy/: executor.rs  grid.rs  mod.rs
backend/src/types/: mod.rs
backtest/: __init__.py  data_loader.py  engine.py  metrics.py  strategy.py  visualizer.py
config/: __init__.py  config_manager.py  default_config.py
database/: schema.sql
demo_output/: backtest_results_detailed_20251002_134750.csv  backtest_results_detailed_20251005_185820.csv  backtest_results_summary_20251002_134750.csv  backtest_results_summary_20251005_185820.csv  summary_report_20251002_134750.txt  summary_report_20251005_185821.txt
math_modeling/: __init__.py  models.py  path_generators.py  utils.py
ml_models/: __init__.py  base_model.py  mlp_model.py  rnn_model.py  transformer_model.py
output/: backtest_results_detailed_20251002_134315.csv  backtest_results_detailed_20251002_134519.csv  backtest_results_summary_20251002_134315.csv  (+2 more)
(+161 files in other folders)
